--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <small> Cahayasetiaelectric</small>
         </div></a>
 
- <a href="https://tokopedia.link/wVIFvGkn5Nb" target="_blank">
+ <a href="https://www.tokopedia.com/cahayasetiastore" target="_blank">
             <div class="card">
-            <img src="img/tokped2.png" width="100px" height="100px" style="border-radius: 100px;" alt="">
-            <small> Cahayasetiaelektric</small>
+            <img src="img/9.png" width="100px" height="100px" style="border-radius: 100px;" alt="">
+            <small> Cahayasetiastore</small>
         </div></a>
         
     </div>
