--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <div class="video">
             <h1>Video Testimoni</h1>
                 <iframe src="img/testimoni.mp4" frameborder="0"></iframe>
-            <h1>Video Checkout</h1>
+            <h1>Video Checkout dari Live</h1>
             <iframe src="img/checkout.mp4" frameborder="0"></iframe>
+            <h1>Video Checkout dari Bio</h1>
+            <iframe src="img/checkout bio ok.mp4" frameborder="0"></iframe>
         </div>
         <div class="link">
             <a href="https://www.tiktok.com/@cahayacenterid1?_t=8qwbstvmfoO&_r=1" target="_blank">
