--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <small>Cahayacenterid1</small>
             </div></a>
     
-    <!-- <a href="https://s.shopee.co.id/7fIBuzpwXc" target="_blank">
+    <a href="https://s.shopee.co.id/7fIBuzpwXc" target="_blank">
                 <div class="card">
                 <img src="img/6.png" width="100px" height="100px" style="border-radius: 100px;" alt="">
                 <small> Cahayasetiaelectric</small>
-            </div></a> -->
+            </div></a>
     
      <a href="https://www.tokopedia.com/cahayasetiastore" target="_blank">
                 <div class="card">
